# bea-mcp

./: README.md  docker-compose.yml
agent/: .env.template  Dockerfile  __init__.py  api.py  cli.py  database.py  embeddings.py  llm.py  logger.py  lookup.py  mcp.py  mcp_server.py  pick_dataset.py  pyproject.toml  run.py  summarize.py
agent/tests/: test_mcp_server.py
